--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <a href="./lab5/">Лабораторная #5</a>
         <a href="./lab6/">Лабораторная #6</a>
         <a href="./lab7/">Лабораторная #7</a>
+        <a href="./lab8/build/index.html">Лабораторная #8</a>
+        <a href="./lab9/build/index.html">Лабораторная #9</a>
         <br />
     </body>
 </html>
